--- a/css/alamo.css
+++ b/css/alamo.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat/Montserrat-Regular.ttf)
+}
+
 @font-face {
     font-family: "Ubuntu";
-    src: url(https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap);
+    src: url(../fonts/Ubuntu/Ubuntu-Regular.ttf)
 }
 
 @font-face {
@@ -9,14 +16,9 @@
     font-weight: bold;
 }
 
-@font-face {
-    font-family: "Montserrat";
-    src: url(../fonts/Montserrat/Montserrat-Regular.ttf)
-}
-
 body {
     margin-top: 85px;
-    font-family: Helvetica Neue, Montserrat, Ubuntu, Helvetica, Arial, sans-serif;
+    font-family: Roboto, Monsterrat, sans-serif;
     background-color: #f1f0f0;
     background-image: url(../img/logo.png);
     background-repeat: repeat-x;
@@ -24,6 +26,7 @@ body {
 }
 
 h1 {
+    font-family: Montserrat, sans-serif;
     color: #0b850b;
     text-align: center;
     font-size: 1.9em;
