--- a/css/alamo.css
+++ b/css/alamo.css
@@ -18,7 +18,7 @@
 
 body {
     margin-top: 85px;
-    font-family: Roboto, Monsterrat, sans-serif;
+    font-family: Roboto, sans-serif;
     background-color: #f1f0f0;
     background-image: url(../img/logo.png);
     background-repeat: repeat-x;
