--- a/css/alamo.css
+++ b/css/alamo.css
@@ -25,22 +25,29 @@ body {
     background-position: top;
 }
 
+div#tableContainer {
+    display: table;
+    border-spacing: 20px;
+}
+
+div#tableRow {
+    display: table-row;
+}
+
 main {
-    margin: 0 330px 10px 10px;
+    display: table-cell;
+    background-color: white;
 }
 
 #sidebar {
-    width: 300px;
-    position: absolute;
-    top: 130px;
-    right: 10px;
+    display: table-cell;
     background-color: white;
-    margin: 0 10px 10px 10px;
+    vertical-align: top;
 }
 
 footer {
     background-color: white;
-    margin: 0 330px 10px 10px;
+    vertical-align: top;
 }
 
 h1 {
@@ -74,6 +81,16 @@ ol {
 
 q {
     font-weight: bold;
+}
+
+table {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid black;
+    padding: 5px;
 }
 
 blockquote {
