--- a/css/twitter.css
+++ b/css/twitter.css
@@ -70,6 +70,15 @@ a {
     width: calc(25% - 1em);
 }
 
+.profile-items {
+    list-style: none;
+    padding: 0;
+}
+
+.profile-entry {
+    margin: .5em;
+}
+
 .timeline {
     float: left;
     margin: 0 .5em;
@@ -109,7 +118,14 @@ a {
     background-color: var(--light-bg);
     border-bottom: 1px solid var(--separator-color);
     padding: .5em;
-    overflow: auto;
+    /* overflow solution to clearing floats */
+    /*overflow: auto;*/
+    /* clearfix hack */
+    /*content: "";*/
+    /*display: table;*/
+    /*clear: both;*/
+    /* flow parent element around floated children */
+    display: flow-root;
 }
 
 .media-image {
