--- a/css/flexbox-intro.css
+++ b/css/flexbox-intro.css
@@ -8,11 +8,11 @@ body {
     margin: auto;
     background: mediumpurple;
     width: calc(100vw - 460px);
-    height: 600px;
+    height: 900px;
     border: darkslateblue solid 10px;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     /*flex-wrap: wrap;*/
     /*align-content: flex-start;*/
@@ -21,25 +21,27 @@ body {
 #important-item {
     background: palegreen;
     border-color: forestgreen;
-    order: 0;
+    margin: auto 0;
+    /*order: 0;*/
     /*align-self: flex-end;*/
-    flex-grow: 3;
+    /*flex-grow: 3;*/
 }
 
 #other-item {
     background: palegoldenrod;
     border-color: goldenrod;
-    order: -1;
+    /*order: -1;*/
     /*align-self: flex-start;*/
-    flex-grow: 2;
+    /*flex-grow: 2;*/
 }
 
 .flex-item {
     background: rosybrown;
     border: indianred solid 5px;
     padding: 8px;
-    order: 1;
-    flex-grow: 1;
+    margin: .5em 0;
+    /*order: 1;*/
+    /*flex-grow: 1;*/
 }
 
 /*.box-1 {*/
