complete DOM traversal lecture

--- a/css/jQuery-essential-methods.css
+++ b/css/jQuery-essential-methods.css
@@ -24,7 +24,12 @@
     color: hotpink;
 }
 
+
 ::selection {
     background-color: rebeccapurple;
     color: white;
+}
+
+.sansSerif {
+    font-family: sans-serif;
 }
